--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Our Story</title>
+    <title>小菁菁新年快乐！</title>
 
     <link type="text/css" rel="stylesheet" href="./index_files/default.css">
     <script type="text/javascript" src="./index_files/jquery.min.js"></script>
@@ -38,13 +38,7 @@
             <div id="code">
             </div>
         </div>
-        <div id="clock-box">
-                    <span id="clock-box-inside-text">
-					</span>
-            <div id="clock"></div>
-        </div>
-        <canvas id="canvas" width="1100" height="680"></canvas>
-    </div>
+
 
 </div>
 
