--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
             <div id="code">
             </div>
         </div>
-
+       <div id="clock-box">
+                    <span id="clock-box-inside-text">
+					</span>
+            <div id="clock"></div>
+        </div>
+        <canvas id="canvas" width="1100" height="680"></canvas>
+    </div>
 
 </div>
 
