--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     }).reduce((a, b) => {
         return a + b;
     }))
-    $("#clock-box-inside-text").html(`${config.names[0]}<span class="STYLE1"></span> ${config.names[1]}<span class="STYLE1">已经等待了</span>`)
+   $("#clock-box-inside-text").html(`${config.names[0]}<span class="STYLE1"></span> 已经等待了${config.names[1]}<span class="STYLE1"></span>`)
+
 </script>
 
 <script>
